[gd_scene load_steps=10 format=3 uid="uid://o3ed3n7ummfb"]

[ext_resource type="Texture2D" uid="uid://b15lxe6bb2ear" path="res://resources/graphics/player/player.png" id="1_6si4w"]
[ext_resource type="Script" path="res://resources/scenes/player/player.gd" id="1_icynt"]
[ext_resource type="Texture2D" uid="uid://du7xlymcm667" path="res://resources/graphics/decals/white.png" id="3_7tspd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pdmrm"]
radius = 49.2544

[sub_resource type="Gradient" id="Gradient_x5l3w"]
offsets = PackedFloat32Array(0, 0.962857)
colors = PackedColorArray(0.352941, 0.764706, 0.788235, 0.741176, 0.25098, 0.784314, 0.733333, 0.631373)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_3v02j"]
gradient = SubResource("Gradient_x5l3w")

[sub_resource type="CurveXYZTexture" id="CurveXYZTexture_4g4yr"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_hbm0r"]
particle_flag_disable_z = true
angular_velocity_min = 10.0
angular_velocity_max = 88.0
directional_velocity_min = 400.0
directional_velocity_max = 600.0
directional_velocity_curve = SubResource("CurveXYZTexture_4g4yr")
gravity = Vector3(0, 0, 0)
scale_min = 0.5
scale_max = 0.6
color = Color(0.25098, 0.784314, 0.733333, 0.631373)
color_ramp = SubResource("GradientTexture1D_3v02j")

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_wseih"]
polygon = PackedVector2Array(-25, -43, -13, -48, -2, -50, 6, -50, 11, -50, 19, -52, 25, -49, 28, -42, 29, -42, 36, -36, 40, -26, 50, -24, 58, -14, 67, -10, 70, -13, 80, -7, 91, -4, 100, -1, 99, 4, 103, 2, 107, 7, 107, 17, 104, 24, 98, 21, 99, 26, 92, 27, 89, 26, 85, 27, 80, 32, 77, 33, 77, 39, 69, 40, 53, 39, 49, 37, 47, 33, 46, 30, 35, 29, 32, 32, 26, 33, 17, 35, 14, 38, 8, 42, -5, 42, -9, 45, -14, 43, -20, 43, -24, 42, -26, 40, -29, 34, -32, 31, -35, 23, -39, 21, -41, 15, -39, 10, -42, 7, -46, 1, -47, -8, -47, -18, -45, -25, -41, -28, -41, -34, -38, -37, -30, -40, -27, -41)

[node name="Player" type="CharacterBody2D"]
collision_mask = 31
script = ExtResource("1_icynt")

[node name="PlayerImage" type="Sprite2D" parent="."]
position = Vector2(30, -3)
rotation = 1.5708
scale = Vector2(0.8, 0.8)
texture = ExtResource("1_6si4w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_pdmrm")

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="GrenadeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LaserStartPosition" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserStartPosition"]
position = Vector2(107, 11)

[node name="Marker2D2" type="Marker2D" parent="LaserStartPosition"]
position = Vector2(104, 3)

[node name="Marker2D3" type="Marker2D" parent="LaserStartPosition"]
position = Vector2(105, 19)

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(106, 12)
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_hbm0r")
texture = ExtResource("3_7tspd")
lifetime = 0.2
one_shot = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_wseih")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="ready" from="ShotTimer" to="." method="_on_shot_timer_ready"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_shot_timer_timeout"]
[connection signal="timeout" from="GrenadeTimer" to="." method="_on_grenade_timer_timeout"]
